# angle-android

./: .gitignore  Android.arm.args.gn  Android.arm64.args.gn  Android.x64.args.gn  Dockerfile  README.md  build.sh  docker_build.sh  index.html  package_aar.sh  publish_maven.sh
.github/workflows/: android-build.yml  build-template.yml
aar/: AndroidManifest.xml  abi.json.template  module-libEGL.json  module-libGLESv2.json  prefab.json
