target_os = "android"
target_cpu = "arm64"
android_ndk_api_level = 24
is_component_build = false
is_debug = false
dcheck_always_on = false
is_official_build = true
strip_debug_info = false
symbol_level = 1
angle_assert_always_on = false
angle_build_tests = false
angle_build_all = false
angle_enable_gl = true
angle_enable_vulkan = true
angle_enable_d3d9 = false
angle_enable_d3d11 = false
angle_enable_metal = false
angle_enable_wgpu = false
angle_enable_null = false
angle_enable_glsl = true
angle_enable_essl = true
angle_enable_abseil = false
angle_enable_share_context_lock = false
angle_has_frame_capture = false
chrome_pgo_phase = 0
use_custom_libcxx = true
use_siso = false
use_thin_lto = false
enable_rust = false
use_sysroot = false
treat_warnings_as_errors = false
angle_libs_suffix = ""
